--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,10 @@
     <string name="spring">Spring</string>
     <string name="summer">Summer</string>
     <string name="fall">Fall</string>
+    <string name="place_for_ad">PLACE FOR AD</string>
+    <string name="alternate_titles">Alternate Titles</string>
+    <string name="view_more">View More</string>
+    <string name="opening_ending_themes">Opening/Ending Themes</string>
+    <string name="related">Related</string>
+    <string name="recommendations">Recommendations</string>
 </resources>
