--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
         <item>Completed</item>
         <item>On Hold</item>
         <item>Dropped</item>
+        <item>Rewatching</item>
     </string-array>
 
 
