AnimeList Fragment working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
         <item>Completed</item>
         <item>On Hold</item>
         <item>Dropped</item>
+        <item>Rewatching</item>
         <item>All</item>
     </string-array>
 
