--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,15 @@
         <item>Rewatching</item>
     </string-array>
 
+    <string-array name="mal_statuses">
+        <item>watching</item>
+        <item>plan_to_watch</item>
+        <item>completed</item>
+        <item>on_hold</item>
+        <item>dropped</item>
+    </string-array>
+
+
 
     <string-array name="Years">
         <item>2024</item>
