added anime by season in explore fragment

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -19,4 +19,5 @@
     <string name="top_upcoming">Top Upcoming</string>
     <string name="recommendation">Recommendation</string>
     <string name="itemLayout" />
+    <string name="manga">Manga</string>
 </resources>
