Removed Progress bar and added narutomaki loading dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,13 @@
         <item>Schedule</item>
     </string-array>
 
+    <string-array name="ProfileTabs">
+        <item>Stats</item>
+        <item>Favorites</item>
+        <item>Friends</item>
+    </string-array>
+
+
     <string-array name="RankingTypes">
         <item>All</item>
         <item>Airing</item>
