--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -291,6 +291,7 @@
     <string name="characters">Characters</string>
     <string name="anime_statistics">Anime Statistics</string>
     <string name="manga_statistics">Manga Statistics</string>
+    <string name="account">Account</string>
 
 
 </resources>
