--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -292,6 +292,18 @@
     <string name="anime_statistics">Anime Statistics</string>
     <string name="manga_statistics">Manga Statistics</string>
     <string name="account">Account</string>
+    <string name="settings">Settings</string>
+    <string name="setting_list_description">Dark Mode, NSFW Filter</string>
+    <string name="faq">F.A.Q</string>
+    <string name="faqDescription">Answers to some common questions</string>
+    <string name="aboutApp">About App</string>
+    <string name="aboutAppDescription">Information about app</string>
+    <string name="rateAndReview">Rate And Review App</string>
+    <string name="rateAndReviewDescription">Please rate and review this app on the play store.</string>
+    <string name="sendFeedback">Send Feedback</string>
+    <string name="sendFeedbackDescription">Send your feedback and suggestions</string>
+    <string name="reportBug">Report A Bug</string>
+    <string name="reportBugDescription">Report a bug or any issues</string>
 
 
 </resources>
