--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,17 @@
         <item>Manga</item>
         <item>Novels</item>
         <item>OneShots</item>
+        <item>Manhwa</item>
+        <item>Manhua</item>
+        <item>By Popularity</item>
+        <item>Favorite</item>
+    </string-array>
+
+    <string-array name="MangaRankingTypes_NSFW">
+        <item>All</item>
+        <item>Manga</item>
+        <item>Novels</item>
+        <item>OneShots</item>
         <item>Doujin</item>
         <item>Manhwa</item>
         <item>Manhua</item>
