added error handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -326,7 +326,7 @@
     <string name="reportBug">Report A Bug</string>
     <string name="reportBugDescription">Report a bug or any issues</string>
     <string name="krishnaPandey">Krishna Pandey</string>
-    <string name="an_myanimelist_client">A MyAnimeList Client</string>
+    <string name="an_myanimelist_client">An MyAnimeList Client</string>
     <string name="developer">Developer</string>
     <string name="developerDescription">About Developer</string>
     <string name="librariesUsedDescription">List of libraries used</string>
