added recommendation activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,7 +89,7 @@
         <item>Movie</item>
         <item>Special</item>
         <item>By Popularity</item>
-        <item>Favorites</item>
+        <item>Favorite</item>
     </string-array>
 
     <string-array name="weekdays">
